@@ -1,3 +1,8 @@
+2005-07-25  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	- Initialize some variables, from Ross Burton, #311518
+
 2005-07-13  Behdad Esfahbod  <gnome@behdad.org>
 
 	* .cvsignore:
